# prac-sem-3

prac11/: CMakeLists.txt  README.md
prac11/include/: collection.h  db.h  hashmap.h  server.h
prac11/src/: client.cpp  collection.cpp  db.cpp  main.cpp  server.cpp  server_main.cpp
test/: .dockerignore  JSON_OUTPUT.md  Makefile  README.md  docker-compose.yml  setup_zsh_history.sh
test/config/: agent_config.json
test/docker/: Dockerfile-db  Dockerfile.nginx  Dockerfile.web  nginx.conf
test/include/: config_manager.h  database.h  db_manager.h  hashmap.h  json_parser.h  log_collector.h  log_parser.h  message_buffer.h  query_evaluator.h  security_agent.h  sender.h  server.h
test/my_database/: users.json
test/security_db/: security_events.json
test/src/: client.cpp  main.cpp  security_agent.cpp  server.cpp
test/web/: .gitignore  api.py  app.py  auth.py  config.py  database.py  db_client.py  event_utils.py  routes.py  run.sh
test/web/static/css/: style.css
test/web/static/js/: dashboard.js  events.js
test/web/templates/: base.html  dashboard.html  events.html  login.html
